[package]
name = "photodna"
version = "1.5.1"
edition = "2021"
rust-version = "1.70"
license = "MIT OR Apache-2.0"
description = "Safe, high-level Rust bindings for the Microsoft PhotoDNA Edge Hash Generator"
repository = "https://github.com/your-org/photodna-rs"
documentation = "https://docs.rs/photodna"
readme = "README.md"
keywords = [
    "photodna",
    "image-hashing",
    "perceptual-hash",
    "content-moderation",
]
categories = ["multimedia::images", "api-bindings"]
exclude = ["/target"]

[dependencies]
photodna-sys = { path = "../photodna-sys", version = "1.5.1" }
thiserror = "2"

# Optional dependencies for test utilities
rand = { version = "0.8", optional = true }

[dev-dependencies]
# For running examples and tests with image loading
# (not required for library consumers)
proptest = "1.5"
rand = "0.8"

[features]
default = []
# Enables test utilities for downstream crates
# Provides mock hashes, fixtures, and testing helpers
test-utils = ["rand"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
